@@ -21,6 +21,9 @@ a { color: black; text-decoration: underline; font-weight: normal;}
 
 <h2><a name="changes097a">Changes For This Version (0.97 to 0.97a)</a></h2>
 
+<p>Lots of bugs appeared the day after 0.97 was released! There are a few small
+features added, but mainly this is bugfixes.</p>
+
 <h3>Fixes</h3>
 <ul>
     <li>Incorrect action URL in 'map selector' combo box for Cacti users.</li>
@@ -51,6 +54,7 @@ a { color: black; text-decoration: underline; font-weight: normal;}
 	<li>LINK WIDTH accepts decimals</li>
 	<li>cacti-integrate.php can generate DSStats TARGETs too</li>
 	<li>Simple VIA editing in editor (thanks to Zdolny)</li>
+        <li>SCALE can accept G,M,K,T,m,u,n suffixes (for absolute scales)</li>
 </ul>
 
 	<h2><a name="changes097">Changes For This Version (0.96a to 0.97)</a></h2>
